@@ -6,6 +6,7 @@
 <p>
   Here is some text
 </p>
+<p>distinct<br/>words</p>
 <div>Here is some text in a div</div>
 <div>This has a <a href="http://www.apache.org">link</a>.</div>
 </body>
